ac3parse: let bsid 9 and 10 through

Files with 9 and 10 happen, and seem to comply with the <= 8
format, so let them through.
The spec says nothing about 9 and 10.

https://bugzilla.gnome.org/show_bug.cgi?id=658546